# openfight

./: .clang-format  .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README  README.md  ROADMAP.md  run-linux.sh  run-macos.command  run-windows.ps1
.github/workflows/: cd.yml  ci.yml
data/: config.json  config.xml  config.yml  json-to-yml.sh  notes  xml-to-yml.sh
data/collision/: 01.pcx  02.pcx  03.pcx  04.pcx  05.pcx  06.pcx  07.pcx  08.pcx  09.pcx  10.pcx  11.pcx  12.pcx  13.pcx  collision.json  collision.xml  collision.yml
data/fireball/: fireball.json  fireball.xml  fireball.yml
data/fireball_collision/: fireball_collision.json  fireball_collision.xml  fireball_collision.yml
data/ground_collision/: collision.json  collision.xml  collision.yml
data/ryu/: moves.json  moves.xml  moves.yml  ryu.json  ryu.xml  ryu.yml
include/: actions.h  actor.h  animation.h  camera.h  collision.h  collisionBox.h  configuration.h  gl.h  global.h  graphics.h  graphicsCore.h  input.h  json.h  keyState.h  moves.h  objectManager.h  player.h  playerAgent.h  playerBridge.h  sprite.h  textureManager.h  utilities.h  yaml.h
src/: actions.cpp  animation.cpp  camera.cpp  collision.cpp  collisionBox.cpp  configuration.cpp  graphics.cpp  graphicsCore.cpp  input.cpp  json.cpp  keyState.cpp  main.cpp  moves.cpp  player.cpp  playerAgent.cpp  playerBridge.cpp  sprite.cpp  textureManager.cpp  utilities.cpp  yaml.cpp
